--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "path": "^0.12.7",
-    "dotenv": "^16.0.3"
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22"
   }
-} 
+}
