--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "cra-template": "1.3.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "framer-motion": "^12.23.22",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.4"
   },
   "scripts": {
     "start": "react-scripts start",
