--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,17 @@
     "@supabase/supabase-js": "^2.56.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "cra-template": "1.3.0",
     "framer-motion": "^12.23.22",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "sweetalert2": "^11.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
