Enhanced AI Car Marketplace with comprehensive features
- Added MongoDB authentication system with JWT tokens
- Enhanced prediction system with detailed car information display
- Added dynamic model filtering based on company and year
- Created comprehensive market trends analysis with interactive charts
- Added MongoDB Atlas integration for user management
- Implemented enhanced prediction display with price statistics
- Added fuel type, transmission, and condition distribution data
- Created responsive React components for better UX
- Updated .gitignore to exclude large files and test artifacts
- Added comprehensive documentation and setup guides

--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,23 @@ instance/
 
 # Database
 *.db
-*.sqlite3 
+*.sqlite3
+
+# Large model files
+*.pkl
+*.joblib
+*.h5
+*.model
+
+# Large datasets
+*.csv
+enhanced_indian_car_dataset.csv
+
+# Test files
+test_*.py
+*_test.py
+verify_*.py
+
+# Generated files
+generate_*.py
+retrain_*.py 
