--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "chart.js": "^4.5.0",
     "cra-template": "1.3.0",
     "framer-motion": "^12.23.22",
+    "isexe": "^3.1.1",
+    "randombytes": "^2.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
